fix text alignment on angled content images

--- a/Content/sites/enterprises/assets/css/general.css
+++ b/Content/sites/enterprises/assets/css/general.css
@@ -52,6 +52,7 @@ body {
 
 .flex--60 {
   width: 60%;
+  height: 40vw;
   position: relative;
 }
 
